crates/paws_domain/src/snapshots/paws_domain__context__tests__update_image_tool_calls_no_tool_results.snap
---
source: crates/paws_domain/src/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
  - text:
      role: User
      content: User message
  - text:
      role: Assistant
      content: Assistant message
